--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,204 +1,249 @@
-
 .Contact_us {
-    padding: 80px;
-    background-image: url("/public/image 19.png");
-    height: 100% 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  .Contact_us h1 {
-    font-family: 'Monoton', cursive;
-    font-size: 90px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 118.305%; /* 118.305px */
-    background: linear-gradient(
-      180deg,
-      #fefefe 38.02%,
-      rgba(248, 141, 114, 0.5) 68.75%
-    );
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    
-  }
-  
-  
-  #button{
-    margin-top: 40px;
-  }
-  #button_2{
-    margin-top: 20px;
-  }
-  #form h3 {
-    color: #020830;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-family: 'Montserrat', sans-serif;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    text-align: left;
-  }
-  #office_locat h3{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 35px;
-    color: #020830;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    font-weight: 700;
-    line-height: 43px;
-    letter-spacing: 0em;
-    text-align: left;
-    margin-top: 30px;
-  }
-  #office_locat p {
-    color: #020830;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-  }
-  
-  .learn-more-abc {
-    background: transparent;
-    border: 0px;
-    position: relative;
-    padding: 0.5rem 1rem;
-    font-size: 18px;
-    color: white;
-    margin-top: 22px;
-  }
-  .learn-more-abc .text {
-    background: linear-gradient(90deg, #f7973b 0%, #f15829 100%);
-    background-clip: text;
-    z-index: 1;
-    position: relative;
-    transition: 0.3s ease-in-out;
-    font-weight: 300;
-    color: #fff;
-    font-family: "Lato", sans-serif;
-    font-size: 20px;
-    font-style: normal;
-    line-height: normal;
-  }
-  .learn-more-abc::before {
-    width: 0%;
-    height: 100%;
-    content: "";
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    background: rgba(2, 8, 48, 1);
-    z-index: 0;
-    transition: 0.4s ease-in-out;
-    color: white;
-  }
-  .learn-more-abc::after {
-    width: 30px;
-    height: 100%;
-    content: "";
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    background: rgba(2, 8, 48, 1);
-    z-index: 0;
-    border-left: 2px solid white;
-    -webkit-clip-path: polygon(100% 50%, 0 0, 0 100%);
-    clip-path: polygon(100% 50%, 0 0, 0 100%);
-    transition: 0.4s ease-in-out;
-  }
-  
-  .learn-more-abc:hover::before {
-    width: 100%;
-  }
-  .learn-more-abc:hover::after {
-    left: 99.5%;
-  }
-  #line_wit {
-    border: 1px solid #020830;
-    width: 33px;
-    height: 1px;
-    margin-top: 42px;
-    margin-left: -8px;
-  }
-  .custom-btn {
-      display: inline-block;
-      padding: 10px 15px;
-      border-radius: 5px;
-      margin: 5px;
-      text-decoration: none;
-      color: #fff;
-    }
-    
-    /* Google Button */
-    .custom-btn:nth-child(1) {
-      background-color: #dd4b39;
-    }
-    
-    /* Instagram Button */
-    .custom-btn:nth-child(2) {
-      background-color: #ac2bac;
-    }
-    
-    /* Linkedin Button */
-    .custom-btn:nth-child(3) {
-      background-color: #0082ca;
-    }
-  
-    .fa {
-      padding: 10px;
-      font-size: 20px;
-      text-align: center;
-      text-decoration: none;
-      height: 40px;
-      width: 40px;
-      border-radius: 100%;
-      margin: 5px;
-      background-color: #020830;
-  
-    }
-    
-    .fa:hover {
-        opacity: 0.7;
-    }
-    
-    .fa-facebook {
-      color: white;
-      
-    }
-    .fa-twitter {
-      color: white;
-    }
-    
-  .fa-instagram {
-    color: white;
-  }
-  .fa-linkedin {
-    color: white;
-  }
-  #follow{
-    color: #000;
-  font-family: 'Montserrat', sans-serif;
+  position: relative;
+  padding: 80px;
+  background-image: url("/public/Group 103.png");
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  filter: blur(2px rgba(248, 141, 114, 0.5));
+}
+
+.Contact_us h1 {
+  font-family: "Monoton", cursive;
+  font-size: 90px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 118.305%; /* 118.305px */
+  background: linear-gradient(
+    180deg,
+    #fefefe 38.02%,
+    rgba(248, 141, 114, 0.5) 68.75%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+#button {
+  margin-top: 40px;
+}
+#button_2 {
+  margin-top: 20px;
+}
+.Contact_us h3 {
+  color: #020830;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-family: "Montserrat", sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-align: left;
+}
+#office_locat h3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 35px;
+  color: #020830;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-weight: 700;
+  line-height: 43px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-top: 30px;
+}
+#office_locat p {
+  color: #020830;
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.learn-more-abc {
+  background: transparent;
+  border: 0px;
+  position: relative;
+  padding: 0.5rem 1rem;
+  font-size: 18px;
+  color: white;
+  margin-top: 22px;
+}
+.learn-more-abc .text {
+  background: linear-gradient(90deg, #f7973b 0%, #f15829 100%);
+  -webkit-background-clip: text;
+  z-index: 1;
+  position: relative;
+  transition: 0.3s ease-in-out;
+  font-weight: 300;
+  color: #fff;
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  line-height: normal;
+}
+.learn-more-abc::before {
+  width: 0%;
+  height: 100%;
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background: rgba(2, 8, 48, 1);
+  z-index: 0;
+  transition: 0.4s ease-in-out;
+  color: white;
+}
+.learn-more-abc::after {
+  width: 30px;
+  height: 100%;
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background: rgba(2, 8, 48, 1);
+  z-index: 0;
+  border-left: 2px solid white;
+  -webkit-clip-path: polygon(100% 50%, 0 0, 0 100%);
+  clip-path: polygon(100% 50%, 0 0, 0 100%);
+  transition: 0.4s ease-in-out;
+}
+
+.learn-more-abc:hover::before {
+  width: 100%;
+}
+.learn-more-abc:hover::after {
+  left: 99.5%;
+}
+#line_wit {
+  border: 1px solid #020830;
+  width: 33px;
+  height: 1px;
+  margin-top: 42px;
+  margin-left: -8px;
+}
+.custom-btn {
+  display: inline-block;
+  padding: 10px 15px;
+  border-radius: 5px;
+  margin: 5px;
+  text-decoration: none;
+  color: #fff;
+}
+
+/* Google Button */
+.custom-btn:nth-child(1) {
+  background-color: #dd4b39;
+}
+
+/* Instagram Button */
+.custom-btn:nth-child(2) {
+  background-color: #ac2bac;
+}
+
+/* Linkedin Button */
+.custom-btn:nth-child(3) {
+  background-color: #0082ca;
+}
+
+.fa {
+  padding: 10px;
+  font-size: 20px;
+  text-align: center;
+  text-decoration: none;
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  margin: 5px;
+  background-color: #020830;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+  color: white;
+}
+.fa-twitter {
+  color: white;
+}
+
+.fa-instagram {
+  color: white;
+}
+.fa-linkedin {
+  color: white;
+}
+#follow {
+  color: #000;
+  font-family: "Montserrat", sans-serif;
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
   line-height: 100%; /* 12px */
   letter-spacing: -0.84px;
-  }
-  .links_name{
-    width: 440px;
+}
+.links_name {
+  width: 440px;
   height: 41px;
   margin-top: 240px;
+}
+.links_name a {
+  text-decoration: none;
+  color: #020830;
+  font-family: "Montserrat", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin: 5px;
+}
+.custom-input,
+textarea {
+  background: transparent;
+  border: 1px solid #090c0f;
+  padding: 0.375rem 0.75rem;
+  border-right: none;
+  border-left: none;
+  border-top: none;
+  transition: background 0.3s, border 0.3s; /* Add smooth transition effect */
+  color: white;
+}
+
+.custom-input:hover,
+textarea:hover {
+  background: transparent;
+  border: 1px solid #090c0f;
+  border-right: none;
+  border-left: none;
+  border-top: none;
+}
+
+.custom-input:focus,
+textarea:focus {
+  outline: none;
+  box-shadow: none;
+  background: transparent;
+  border: 1px solid #090c0f;
+  border-right: none;
+  border-left: none;
+  border-top: none;
+}
+
+@media only screen and (max-width: 460px) {
+  .Contact_us h1 {
+    display: none;
   }
-  .links_name a{
-    text-decoration: none;
+
+  #form h3 {
     color: #020830;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 13px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: "Montserrat", sans-serif;
+    font-size: 30px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-  margin: 5px;
+    text-align: left;
   }
   .custom-input,
   textarea {
@@ -209,25 +254,78 @@
     border-left: none;
     border-top: none;
     transition: background 0.3s, border 0.3s; /* Add smooth transition effect */
+    font-size: 12px;
   }
-  
-  .custom-input:hover,
-  textarea:hover {
-    background: transparent;
-    border: 1px solid #090c0f;
-    border-right: none;
-    border-left: none;
-    border-top: none;
+  #button {
+    margin-top: 0px;
   }
-  
-  .custom-input:focus,
-  textarea:focus {
-    outline: none;
-    box-shadow: none;
-    background: transparent;
-    border: 1px solid #090c0f;
-    border-right: none;
-    border-left: none;
-    border-top: none;
+  .learn-more-abc::after {
+    width: 25px;
+    height: 107%;
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background: rgba(2, 8, 48, 1);
+    z-index: 0;
+    border-left: 2px solid white;
+    clip-path: polygon(100% 50%, 0 0, 0 100%);
+    transition: 0.4s ea;
   }
-  
+  .learn-more-abc .text {
+    background: linear-gradient(90deg, #f7973b 0%, #f15829 100%);
+    -webkit-background-clip: text;
+    z-index: 1;
+    position: relative;
+    transition: 0.3s ease-in-out;
+    font-weight: 300;
+    color: #fff;
+    font-family: "Lato", sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    line-height: normal;
+  }
+  #line_wit {
+    border: 1px solid #020830;
+    width: 33px;
+    height: 1px;
+    margin-top: 47px;
+    margin-left: -8px;
+  }
+  .Contact_us {
+    padding: 154px 10px;
+    background-image: url("/public/image 19.png");
+    height: 100% 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  #form {
+    display: none;
+  }
+  .Contact_us h3 {
+    color: #020830;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: "Montserrat", sans-serif;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-align: center;
+  }
+}
+@media (max-width: 768px) {
+  .learn-more-abc {
+    display: none;
+  }
+  #line_wit {
+    display: none;
+  }
+}
+@media (max-width: 460) {
+  .learn-more-abc {
+    display: none;
+  }
+  #line_wit {
+    display: none;
+  }
+}
