--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -1,48 +1,102 @@
-.Portfolio{
-     padding: 80px;
-      background-image: url("/public/Group 104 (1).png");
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-color: black;
-      height: 100vh;
+.Portfolio {
+  padding: 94px 23px;
+  background-image: url("/public/Group 104 (1).png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: black;
+  height: 100%;
 }
-.Portfolio h1{
-    font-family: Monoton;
-font-size: 100px;
-font-weight: 400;
-line-height: 118px;
-letter-spacing: 0em;
-text-align: center;
-color: white;
-
+.Portfolio h1 {
+  font-family: Monoton;
+  font-size: 80px;
+  font-weight: 400;
+  letter-spacing: 0em;
+  text-align: center;
+  color: white;
 }
-.Portfolio P{
-    font-family: Montserrat;
-font-size: 50px;
-font-weight: 700;
-line-height: 61px;
-letter-spacing: 0em;
-text-align: center;
-
+.Portfolio p {
+  font-family: Montserrat;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 61px;
+  letter-spacing: 0em;
+  text-align: center;
 }
 .port img{
-    height: 300px;
+  max-width: 630px;
 }
-/* Portfolio.css */
-
 /* Updated class name for custom Swiper */
 .mySwiperCustom {
-    height: 350px;
+  height: 350px;
+}
+
+/* Customize the color of pagination bullets */
+.mySwiperCustom .swiper-pagination-bullet {
+  border: 1px solid black;
+  background-color: white;
+}
+
+/* Customize the color of the active pagination bullet */
+.mySwiperCustom .swiper-pagination-bullet-active {
+  background-color: black;
+}
+
+.Portfolio {
+  text-align: center;
+}
+
+.Design {
+  font-size: 2em;
+}
+
+.Company {
+  font-size: 1.5em;
+  margin-bottom: 30px;
+}
+
+.mySwiperCustom {
+  width: 100%; 
+  margin: 0 auto; /* Center the Swiper */
+}
+
+/* Add more media queries as needed for different screen sizes */
+@media only screen and (max-width: 992px) {
+  .Portfolio h1 {
+    font-family: Monoton, sans-serif; 
+    font-size: 40px;
+    font-weight: 400;
+    letter-spacing: 0em;
+    color: white;
+    margin-top: 30px;
   }
-  
-  /* Customize the color of pagination bullets */
-  .mySwiperCustom .swiper-pagination-bullet {
-    border: 1px solid black;
-    background-color: white;
+  .Portfolio p {
+    font-family: "Montserrat", sans-serif; 
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 50px;
+    letter-spacing: 0em;
+    text-align: center;
   }
-  
-  /* Customize the color of the active pagination bullet */
-  .mySwiperCustom .swiper-pagination-bullet-active {
-    background-color: black;
+  .mySwiperCustom {
+    height: 300px;
   }
-  
+  .port img{
+    max-width: 630px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .mySwiperCustom {
+    height: 300px;
+  }
+  .port img{
+    max-width: 333px;
+  }
+}
+@media only screen and (max-width: 460px) {
+  .port img{
+    max-width: 300px;
+  }
+  .mySwiperCustom {
+    height: 200px;
+  }
+}
