--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -40,6 +40,9 @@
       height: 400px;
       width: 250px;
   }
+  .mySwiper_c{
+    height:400px;
+  }
   #services-1 h6{
     color:rgba(2, 8, 48, 1);
   font-size: 18px;
