--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,4 @@
-/* content.css */
-
+/* home_page_css axiom_360*/
 * {
   margin: 0;
   padding: 0;
@@ -34,7 +33,7 @@
   background: linear-gradient(90deg, #f7973b 0%, #f15829 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 25px;
   font-weight: 700;
   line-height: normal;
@@ -90,125 +89,139 @@
 
 #paragraph {
   color: #fff;
-  font-family: 'Lato', sans-serif;
-  font-size: 14px;
+  font-family: "Lato", sans-serif;
+  font-size: 15px;
   font-weight: 400;
   line-height: 18px;
   letter-spacing: 0em;
+  text-align: center;
 }
 
 @keyframes clickAnimation {
   to {
-      background-position: 100% 0;
+    background-position: 100% 0;
   }
 }
 
 @media (max-width: 576px) {
   .content {
-      padding: 50px;
+    padding: 50px;
   }
 
   #line {
-      border: 1px solid white;
-      width: 30px;
-      height: 1px;
-      margin-top: 0px;
+    border: 1px solid white;
+    width: 30px;
+    height: 1px;
+    margin-top: 0px;
   }
 
   .content h3 {
-      color: #fff;
-      font-family: "Monoton", sans-serif;
-      font-size: 27px;
-      font-style: normal;
-      font-weight: 400;
-      padding: 0px;
-      text-align: center;
+    color: #fff;
+    font-family: "Monoton", sans-serif;
+    font-size: 27px;
+    font-style: normal;
+    font-weight: 400;
+    padding: 0px;
+    text-align: center;
   }
- 
 }
 
 @media (max-width: 768px) {
   .content {
-      padding: 100px;
+    padding: 100px;
   }
- 
+
   #line {
-      border: 1px solid wheat;
-      width: 30px;
-      height: 1px;
-      margin-top: 0px;
+    border: 1px solid wheat;
+    width: 30px;
+    height: 1px;
+    margin-top: 0px;
   }
-  
+
   .content h3 {
-      color: #fff;
-      font-family: "Monoton", sans-serif;
-      font-size: 27px;
-      font-style: normal;
-      font-weight: 400;
-      padding: 0px;
-      text-align: center;
+    color: #fff;
+    font-family: "Monoton", sans-serif;
+    font-size: 27px;
+    font-style: normal;
+    font-weight: 400;
+    padding: 0px;
+    text-align: center;
   }
   .content h1 {
     font-family: "Monoton", sans-serif;
     font-size: 35px;
     font-weight: 400;
     color: white;
-}
-#with {
-  color: #fff;
-  font-family: "Monoton", Courier, sans-serif;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-size: 11px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 118.305%;
-  word-spacing: 10px;
-}
-.content h2 {
-  background: linear-gradient(90deg, #f7973b 0%, #f15829 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-family: 'Lato', sans-serif;
-  font-size: 19px;
-  font-weight: 700;
-  line-height: normal;
-  text-align: left;
-  text-align: center;
-}
-
+    text-align: center;
+  }
+  #with {
+    color: #fff;
+    font-family: "Monoton", Courier, sans-serif;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 118.305%;
+    word-spacing: 10px;
+  }
+  .content h2 {
+    background: linear-gradient(90deg, #f7973b 0%, #f15829 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: "Lato", sans-serif;
+    font-size: 19px;
+    font-weight: 700;
+    line-height: normal;
+    text-align: left;
+    text-align: center;
+  }
+  .Expolre {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-top: 5px;
+  }
+  .mySwiper_b .swiper-slide:hover h2 {
+    color: #fff;
+    font-size: 20px;
+  }
 }
 
 @media (max-width: 992px) {
   .content {
-      padding: 50px;
+    padding: 50px;
   }
 
   .learn-more .text {
-      background: linear-gradient(90deg, #f7973b 0%, #f15829 100%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      z-index: 1;
-      position: relative;
-      transition: 0.3s ease-in-out;
-      font-weight: 700;
-      font-size: 12px;
+    background: linear-gradient(90deg, #f7973b 0%, #f15829 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    z-index: 1;
+    position: relative;
+    transition: 0.3s ease-in-out;
+    font-weight: 700;
+    font-size: 12px;
   }
-  
-    
+  .Expolre {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-top: 5px;
+  }
 }
 
 @media (max-width: 1024px) {
   .content {
-      padding: 83px 40px;
+    padding: 83px 8px;
   }
   .content h3 {
-      color: #fff;
-      font-family: "Monoton", sans-serif;
-      font-size: 27px;
-      font-style: normal;
-      font-weight: 400;
-      padding: 0px;
-      text-align: center;
+    color: #fff;
+    font-family: "Monoton", sans-serif;
+    font-size: 27px;
+    font-style: normal;
+    font-weight: 400;
+    padding: 0px;
+    text-align: center;
   }
 
   .learn-more::after {
@@ -223,9 +236,9 @@
     border-left: 2px solid white;
     clip-path: polygon(100% 50%, 0 0, 0 100%);
     transition: 0.4s ease-in-out;
-}
+  }
 
-.learn-more .text {
+  .learn-more .text {
     background: linear-gradient(90deg, #f7973b 0%, #f15829 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -234,126 +247,207 @@
     transition: 0.3s ease-in-out;
     font-weight: 0;
     margin: auto;
-}
-
+  }
 }
 
 @import url("https://fonts.googleapis.com/css?family=Mukta:700");
 
 .learn-more {
-background: transparent;
-border: 0px;
-position: relative;
-padding: 0.8rem 1rem;
-justify-content: center;
-align-items: center;
-display: flex;
+  background: transparent;
+  border: 0px;
+  position: relative;
+  padding: 0.8rem 1rem;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  font-size:15px;
 }
 
 .learn-more .text {
-background: linear-gradient(90deg, #f7973b 0%, #f15829 100%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-z-index: 1;
-position: relative;
-transition: 0.3s ease-in-out;
-font-weight: 700;
+  background: linear-gradient(90deg, #f7973b 0%, #f15829 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  z-index: 1;
+  position: relative;
+  transition: 0.3s ease-in-out;
+  font-weight: 700;
 }
 
 .learn-more::before {
-width: 0%;
-height: 50px;
-content: "";
-position: absolute;
-top: 0px;
-left: 0px;
-background: white;
-z-index: 0;
-transition: 0.4s ease-in-out;
+  width: 0%;
+  height: 50px;
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background: white;
+  z-index: 0;
+  transition: 0.4s ease-in-out;
 }
 
 .learn-more::after {
-width: 25px;
-height: 50px;
-content: "";
-position: absolute;
-top: 0px;
-left: 0px;
-background: white;
-z-index: 0;
-border-left: 2px solid white;
--webkit-clip-path: polygon(100% 50%, 0 0, 0 100%);
-clip-path: polygon(100% 50%, 0 0, 0 100%);
-transition: 0.4s ease-in-out;
+  width: 25px;
+  height: 50px;
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background: white;
+  z-index: 0;
+  border-left: 2px solid white;
+  -webkit-clip-path: polygon(100% 50%, 0 0, 0 100%);
+  clip-path: polygon(100% 50%, 0 0, 0 100%);
+  transition: 0.4s ease-in-out;
 }
 
 .learn-more:hover::before {
-width: 100%;
+  width: 100%;
 }
 
 .learn-more:hover::after {
-left: 99.5%;
+  left: 99.5%;
 }
 
 .mySwiper_b {
-position: absolute;
-overflow: hidden;
-height: 300px;
+  position: absolute;
+  overflow: hidden;
+  height: 300px;
 }
 
 .mySwiper_b .swiper-wrapper {
-display: flex;
-gap: 0px;
+  display: flex;
+  gap: 0px;
 }
 
 .mySwiper_b .swiper-slide {
-display: flex;
-align-items: center;
-justify-content: center;
-transition: filter 0.3s ease, transform 0.3s ease;
-height: 20%;
-width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: filter 0.3s ease, transform 0.3s ease;
+  height: 20%;
+  width: 100%;
 }
 
 .mySwiper_b h2 {
-font-weight: normal;
-color: #777;
-margin: 0;
-text-align: center;
-transition: all 0.3s ease;
+  font-weight: normal;
+  color: #777;
+  margin: 0;
+  text-align: center;
+  transition: all 0.3s ease;
 }
 
 .mySwiper_b .swiper-slide-active h2 {
-color: #fff;
-font-weight: bold;
+  color: #fff;
+  font-weight: bold;
 }
 
 .mySwiper_b .swiper-slide:not(.swiper-slide-active) {
-filter: blur(2px);
+  filter: blur(2px);
 }
 
 .mySwiper_b .swiper-slide:hover h2 {
-color: #fff;
-font-size: 35px;
+  color: #fff;
+  font-size: 35px;
 }
 
 .mySwiper_b .swiper-slide:hover {
-filter: none;
-transform: scale(1.05);
+  filter: none;
+  transform: scale(1.05);
 }
 
 /* Additional style for the div within each SwiperSlide */
 .swiper-content {
-height: 20px;
-width: 100%;
+  height: 20px;
+  width: 100%;
 }
 
 @media only screen and (min-width: 460) {
   .mySwiper_b .swiper-slide-active h2 {
     color: #fff;
-    font-size: 18px!important;
+    font-size: 18px !important;
     font-weight: bold;
-}
+  }
 }
 
 
+@media only screen and (min-width: 1024px) {
+
+  .content {
+    padding: 200px;
+  }
+  
+  
+  .content h1 {
+    font-family: "Monoton", sans-serif;
+    font-size: 100px;
+    font-weight: 400;
+    color: white;
+  }
+  
+  .content h2 {
+    background: linear-gradient(90deg, #f7973b 0%, #f15829 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: "Lato", sans-serif;
+    font-size: 25px;
+    font-weight: 700;
+    line-height: normal;
+  }
+  
+  .content p {
+    background: linear-gradient(90deg, #f7973b 0%, #f15829 100%);
+    -webkit-background-clip: text;
+    font-size: 18px;
+    color: white;
+  }
+  
+  #content_text {
+    background: linear-gradient(90deg, #fff 0%, #f15829 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    filter: blur(1.25px);
+  }
+  
+  #with {
+    color: #fff;
+    font-family: "Monoton", Courier, sans-serif;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 118.305%;
+    word-spacing: 30px;
+  }
+  
+  .content h4 {
+    background: linear-gradient(90deg, #fff 0%, #f15829 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    filter: blur(1.25px);
+  }
+  
+  .content h5 {
+    background: linear-gradient(90deg, #f7973b 0%, #f15829 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  
+  #line {
+    border: 1px solid white;
+    width: 33px;
+    height: 1px;
+    margin-top: 20px;
+  }
+  
+  #paragraph {
+    color: #fff;
+    font-family: "Lato", sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0em;
+  }
+  
+}
