--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -103,7 +103,7 @@
   left: 0px;
   background: rgba(2, 8, 48, 1);
   z-index: 0;
-  border-left: 2px solid white;
+  border-left: 2px solid rgba(2, 8, 48, 1);
   -webkit-clip-path: polygon(100% 50%, 0 0, 0 100%);
   clip-path: polygon(100% 50%, 0 0, 0 100%);
   transition: 0.4s ease-in-out;
@@ -269,7 +269,7 @@ textarea:focus {
     left: 0px;
     background: rgba(2, 8, 48, 1);
     z-index: 0;
-    border-left: 2px solid white;
+    border-left: 2px solid rgba(2, 8, 48, 1);
     clip-path: polygon(100% 50%, 0 0, 0 100%);
     transition: 0.4s ea;
   }
@@ -460,7 +460,7 @@ textarea:focus {
     left: 0px;
     background: rgba(2, 8, 48, 1);
     z-index: 0;
-    border-left: 2px solid white;
+    border-left: 2px solid rgba(2, 8, 48, 1);
     -webkit-clip-path: polygon(100% 50%, 0 0, 0 100%);
     clip-path: polygon(100% 50%, 0 0, 0 100%);
     transition: 0.4s ease-in-out;
