--- a/src/components/form.css
+++ b/src/components/form.css
@@ -118,7 +118,7 @@ textarea:focus {
   left: 0px;
   background: rgba(2, 8, 48, 1);
   z-index: 0;
-  border-left: 2px solid white;
+  border-left: 2px solid rgba(2, 8, 48, 1);
   -webkit-clip-path: polygon(100% 50%, 0 0, 0 100%);
   clip-path: polygon(100% 50%, 0 0, 0 100%);
   transition: 0.4s ease-in-out;
