--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,11 +4,9 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 .content {
   padding: 200px;
 }
-
 .content::after {
   background-image: url("/public/image 2.png");
   position: absolute;
@@ -21,7 +19,6 @@
   z-index: -1;
   background-color: rgba(15, 15, 15, 0.5);
 }
-
 .content h1 {
   font-family: "Monoton", sans-serif;
   font-size: 100px;
@@ -311,7 +308,8 @@
 .mySwiper_b {
   position: absolute;
   overflow: hidden;
-  height: 300px;
+  height: 200px;
+  margin:100px;
 }
 
 .mySwiper_b .swiper-wrapper {
@@ -345,14 +343,9 @@
   filter: blur(2px);
 }
 
-.mySwiper_b .swiper-slide:hover h2 {
+.mySwiper_b .swiper-slide-active:hover h2 {
   color: #fff;
   font-size: 35px;
-}
-
-.mySwiper_b .swiper-slide:hover {
-  filter: none;
-  transform: scale(1.05);
 }
 
 /* Additional style for the div within each SwiperSlide */
